<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/etxt_set_sdk_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sdk_key"
                    android:inputType="text"
                    tools:ignore="Autofill" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/etxt_set_google_project_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/google_project_id"
                    android:inputType="number"
                    tools:ignore="Autofill" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/etxt_set_cep_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cep_url"
                    android:inputType="textWebEmailAddress"
                    tools:ignore="Autofill,TextFields" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/etxt_set_app_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_id"
                    android:inputType="number"
                    tools:ignore="Autofill" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/etxt_set_tenant_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tenant_id"
                    android:inputType="number"
                    tools:ignore="Autofill" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_configure_appoxee_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:background="@color/material_teal_200"
                android:text="@string/set_configuration" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/btn_refresh"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/material_teal_200"
                    android:src="@drawable/baseline_refresh_white_48"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:onClick="refreshConfiguration"
                    android:contentDescription="@null" />

                <ImageButton
                    android:id="@+id/btn_delete_all_fields"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/material_teal_200"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:onClick="deleteAllFields"
                    android:src="@drawable/baseline_delete_outline_white_48"
                    android:contentDescription="@null" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_get_configuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@color/material_teal_200"
                android:onClick="getConfiguration"
                android:padding="8dp"
                android:text="@string/get_configuration" />


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
