<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:layout_gravity="top"
    android:paddingBottom="10dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp">

    <ImageView
        android:id="@+id/imageUrl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="fitCenter"
        tools:src="@drawable/mock_background"
        app:layout_constraintWidth_percent="0.2"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:padding="5dp"
        app:layout_constraintStart_toEndOf="@id/imageUrl"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/subject"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/subject"
        app:layout_constraintTop_toBottomOf="@id/subject"
        android:padding="5dp"
        android:text="@string/summary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/subject"
        app:layout_constraintTop_toBottomOf="@id/summary"
        android:padding="5dp"
        tools:text="@string/time"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/time"
        android:padding="5dp"
        tools:text="Status"
        android:textSize="16sp"
        android:textStyle="bold" />
</androidx.constraintlayout.widget.ConstraintLayout>